syntax = "proto3";

package v1.appserversub;
option go_package = "mist/src/protos/v1/appserversub;appserversub";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "v1/appuser/appuser.proto";
import "v1/appserver/appserver.proto";

service AppserverSubService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc ListUserServerSubs(ListUserServerSubsRequest)
      returns (ListUserServerSubsResponse) {}
  rpc ListAppserverUserSubs(ListAppserverUserSubsRequest)
      returns (ListAppserverUserSubsResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// ----- STRUCTURES -----
message AppserverSub {
  string id = 1;
  string appserver_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message AppserverAndSub {
  string sub_id = 1;
  appserver.Appserver appserver = 2;
}

message AppuserAndSub {
  string sub_id = 1;
  appuser.Appuser appuser = 2;
}

// ----- REQUEST/RESPONSE -----
message CreateRequest {
  string appserver_id = 1 [ (buf.validate.field).string.uuid = true ];
}
message CreateResponse { AppserverSub appserver_sub = 1; }

message ListUserServerSubsRequest {}
message ListUserServerSubsResponse { repeated AppserverAndSub appservers = 1; }

message ListAppserverUserSubsRequest {
  string appserver_id = 1 [ (buf.validate.field).string.uuid = true ];
}
message ListAppserverUserSubsResponse { repeated AppuserAndSub appusers = 1; }

message DeleteRequest {
  string id = 1 [ (buf.validate.field).string.uuid = true ];
}
message DeleteResponse {}
